# API-Wrapper

./: CMakeLists.txt  README.md
.github/workflows/: cross-platform-build.yml
includes/: http_client.hpp
src/: http_client.cpp  main.cpp
